--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Desarrollo WEB</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+    <header>
+        <div class="image-container" id="logo">
+            <img src="/img/logo.jpg" alt="Logo Pagina">
+        </div>
+    </header>
+    <section id="hero">
+        <div class="image-container" id="computadora">
+            <img src="./img/computadora.jpg" alt="Computadora">
+        </div>
+        <div class="informacion-contenedor">
+            <div class="image-container" id="foto">
+                <img src="./img/foto.jpg" alt="foto">
+            </div>
+            <div class="informacion">
+                <h1>Carlos Eduardo Gomez Garcia</h1>
+                <span>@usuario</span>
+                <p>Course Director at platzi | Bakend Developer | frontend developer | Youtube context </p>
+            </div>
+        </div>
+
+    </section>
 </body>
 </html>
