--- a/index.html
+++ b/index.html
@@ -29,5 +29,40 @@
         </div>
 
     </section>
+
+    <main>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae quidem quibusdam pariatur quo veritatis ipsum asperiores atque aliquid, ratione nam laborum veniam cupiditate exercitationem quae dolores illum officia nemo quis ad praesentium tempore tempora omnis. Dolorum suscipit enim, molestias temporibus ipsa voluptas maiores doloremque ullam doloribus iure culpa, voluptates velit quas magni odio ducimus at obcaecati sed. Possimus magni alias quas ad, molestias voluptatum soluta, hic harum, blanditiis tempore expedita.!</p>
+
+        <ul class="social-icons">
+
+            <li><a href="#" class="social-icon" id="linkedin">
+                    <img src="./img/linkedin.png" alt="linkedin">
+                </a>
+            </li>
+
+            <li><a href="#" class="social-icon" id="linkedin">
+                    <img src="./img/github.png" alt="github">
+                </a>
+            </li>
+
+            <li><a href="#" class="social-icon" id="linkedin">
+                    <img src="./img/platzi.png" alt="platzi">
+                </a>
+            </li>
+
+            <li><a href="#" class="social-icon" id="linkedin">
+                    <img src="./img/twitter.png" alt="twitter">
+                </a>
+            </li>
+
+            <li><a href="#" class="social-icon" id="linkedin">
+                    <img src="./img/youtube.png" alt="youtube">
+                </a>
+            </li>
+
+        </ul>
+
+
+    </main>
 </body>
 </html>
