--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         </div>
         <div class="informacion-contenedor">
             <div class="image-container" id="foto">
-                <img src="./img/foto.jpg" alt="foto">
+                <img src="./img/Carlos.jpg" alt="foto">
             </div>
             <div class="informacion">
-                <h1>Carlos Eduardo Gomez Garcia</h1>
-                <span>@usuario</span>
-                <p>Course Director at platzi | Bakend Developer | frontend developer | Youtube context </p>
+                <h1>Carlos Andres Martinez</h1>
+                <span>@andrewdeve</span>
+                <p>Director AM Airport Malabo | Bakend Developer | frontend developer | Student Platzi </p>
             </div>
         </div>
 
