--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="image-container" id="logo">
-            <img src="/img/logo.jpg" alt="Logo Pagina">
+            <img src="/img/carmartinez.png" alt="Logo Pagina">
         </div>
     </header>
     <section id="hero">
@@ -40,22 +40,22 @@
                 </a>
             </li>
 
-            <li><a href="#" class="social-icon" id="linkedin">
+            <li><a href="#" class="social-icon" id="github">
                     <img src="./img/github.png" alt="github">
                 </a>
             </li>
 
-            <li><a href="#" class="social-icon" id="linkedin">
+            <li><a href="#" class="social-icon" id="platzi">
                     <img src="./img/platzi.png" alt="platzi">
                 </a>
             </li>
 
-            <li><a href="#" class="social-icon" id="linkedin">
+            <li><a href="#" class="social-icon" id="twitter">
                     <img src="./img/twitter.png" alt="twitter">
                 </a>
             </li>
 
-            <li><a href="#" class="social-icon" id="linkedin">
+            <li><a href="#" class="social-icon" id="youtube">
                     <img src="./img/youtube.png" alt="youtube">
                 </a>
             </li>
