--- a/HTML/claseIndex/index.html
+++ b/HTML/claseIndex/index.html
@@ -2,11 +2,51 @@
 <html lang="en"> <!-- Lenguaje que tiene la pagina-->
 <head> <!-- en la etiqueta head va todo lo importaante pero no es visual para el usuario final-->
   <meta charset="UTF-8">
+  <meta name="description" content="Esta Pagina mostrara fotos de gatos">
+  <meta name="robots" content="index,follow">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Etiquetas meta le dan informacion a nuestro navegador-->
   <title>Curso HTML</title>
+  <link rel="stylesheet" href="../claseIndex/css/style.css">
 </head>
 <body>
+  <!-- Etiquetas Contenedoras-->
+  <header>
+    <nav>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <article>
+
+      </article>
+    </section>
+    <ul>
+      <li>Soy una manzana</li>
+    </ul> <!-- Lista desordenada-->
+    <ol>
+      <li>Soy una pera</li>
+    </ol> <!-- lista ordenada-->
+  </main>
+  <footer>
+  </footer>
+  <div></div> <!-- estructura comodin-->
+
+
+
+
+  <!--Etiquetas de Contenido-->
+
+  <p>soy un texto</p>
+  <h1> Soy un titulo</h1>
+  <h2>Soy otro titulo</h2>
+  <h3>Soy otro titulo</h3>
+  <h4>Soy otro titulo</h4>
+  <h5>Soy otro titulo</h5>
+  <h6>Soy otro titulo</h6>
+
+  <a href="#">Soy un link</a> <!-- Etiqueta para generar links-->
+
   
 </body>
 </html>
